--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('./normalize.css');
+@import url("./normalize.css");
 
-@import '@angular/cdk/overlay-prebuilt.css';
+@import "@angular/cdk/overlay-prebuilt.css";
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
