--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
@@ -3,14 +3,7 @@
     <input type="search" placeholder="Search …" formControlName="query" autocomplete="off" />
   </label>
   <button type="submit" (click)="search()">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="16"
-      height="16"
-      fill="currentColor"
-      class="bi bi-search"
-      viewBox="0 0 16 16"
-    >
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
       <!-- prettier-ignore -->
       <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
     </svg>
@@ -19,19 +12,17 @@
 
 <table>
   <tr>
-    <th>ID</th>
     <th>Description</th>
     <th class="actions">Actions</th>
   </tr>
 
-  <ng-container *ngIf="todos$ | async as todos">
+  <ng-container *ngIf="toDos$ | async as todos">
     <tr *ngFor="let item of todos">
-      <td>{{ item.id }}</td>
       <td>{{ item.description }}</td>
       <td class="actions">
         <div>
-          <button type="button" disabled>Done</button>
-          <button type="button" disabled>Remove</button>
+          <button (click)="markAsDone(item)" type="button" class="btn-done">Done</button>
+          <button (click)="remove(item)" type="button" class="btn-remove">Remove</button>
         </div>
       </td>
     </tr>
