--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.scss
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin: 1rem;
 }
 
 form {
@@ -52,4 +53,12 @@ th {
       width: 50%;
     }
   }
+}
+
+.btn-done {
+  // @todo: add styles
+}
+
+.btn-remove {
+  // @todo: add styles
 }
