--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
@@ -1,13 +1,36 @@
 <form [formGroup]="searchForm" role="search">
-  <label>
-    <input type="search" placeholder="Search …" formControlName="query" autocomplete="off" />
-  </label>
-  <button type="submit" (click)="search()">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-      <!-- prettier-ignore -->
-      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
-    </svg>
-  </button>
+  <div>
+    <label>
+      <input type="search" placeholder="Search …" formControlName="query" autocomplete="off" />
+    </label>
+    <button type="submit" (click)="search()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+        <!-- prettier-ignore -->
+        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+      </svg>
+    </button>
+  </div>
+
+  <ul class="filter-by-status">
+    <li>
+      <label>
+        <input formControlName="statusTodo" type="checkbox" />
+        TODO
+      </label>
+    </li>
+    <li>
+      <label>
+        <input formControlName="statusDone" type="checkbox" />
+        DONE
+      </label>
+    </li>
+    <li>
+      <label>
+        <input formControlName="statusRemoved" type="checkbox" />
+        REMOVED
+      </label>
+    </li>
+  </ul>
 </form>
 
 <table>
