--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.scss
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.scss
@@ -7,25 +7,31 @@
 
 form {
   display: flex;
-  flex-wrap: nowrap;
+  flex-direction: column;
+  gap: 1rem;
 
-  label {
-    width: 100%;
-  }
+  div {
+    display: flex;
+    flex-wrap: nowrap;
 
-  input {
-    border: 1px solid #808080;
-    padding: 1rem;
-    width: 100%;
-    border-radius: 0;
-  }
+    label {
+      width: 100%;
+    }
 
-  button {
-    background: transparent;
-    border: 1px solid #808080;
-    border-left: 0;
-    padding: 0 20px;
-    border-radius: 0;
+    input {
+      border: 1px solid #808080;
+      padding: 0.5rem;
+      width: 100%;
+      border-radius: 0;
+    }
+
+    button {
+      background: transparent;
+      border: 1px solid #808080;
+      border-left: 0;
+      padding: 0 0.5rem;
+      border-radius: 0;
+    }
   }
 }
 
@@ -61,4 +67,12 @@ th {
 
 .btn-remove {
   // @todo: add styles
+}
+
+.filter-by-status {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
+  margin: 0%;
 }
