Remove status REMOVED; Add animations

--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
@@ -24,12 +24,6 @@
         DONE
       </label>
     </li>
-    <li>
-      <label>
-        <input formControlName="statusRemoved" type="checkbox" />
-        REMOVED
-      </label>
-    </li>
   </ul>
 </form>
 
@@ -39,19 +33,33 @@
     <th class="actions">Actions</th>
   </tr>
 
-  <ng-container *ngIf="toDos$ | async as todos">
+  <ng-container *ngIf="toDos$ | async as todos; else loadingTemplate">
     <tr *ngFor="let item of todos">
-      <td [class.done]="item.status !== 'TODO'">{{ item.description }}</td>
+      <td [class.done]="item.status === 'DONE'">{{ item.description }}</td>
       <td class="actions">
-        <div>
-          <button (click)="markAsDone(item)" type="button" class="btn-done" [disabled]="item.status === 'DONE'">
-            Done
-          </button>
-          <button (click)="remove(item)" type="button" class="btn-remove" [disabled]="item.status === 'REMOVED'">
-            Remove
-          </button>
-        </div>
+        <button *ngIf="item.status === 'TO_DO'" (click)="markAsDone(item)" type="button" class="btn-done">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path
+              d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"
+            />
+          </svg>
+        </button>
+        <button *ngIf="item.status === 'DONE'" (click)="markAsToDo(item)" type="button" class="btn-remove">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z" />
+            <path
+              d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"
+            />
+          </svg>
+        </button>
       </td>
     </tr>
   </ng-container>
 </table>
+
+<ng-template #loadingTemplate>
+  <tr *ngFor="let item of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
+    <td class="loading"><div class="bar"></div></td>
+    <td class="actions loading"><div class="bar"></div></td>
+  </tr>
+</ng-template>
