--- a/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
+++ b/src/app/modules/to-do/components/to-do-list/to-do-list.component.html
@@ -58,7 +58,7 @@
 </table>
 
 <ng-template #loadingTemplate>
-  <tr *ngFor="let item of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
+  <tr *ngFor="let item of 10 | createList">
     <td class="loading"><div class="bar"></div></td>
     <td class="actions loading"><div class="bar"></div></td>
   </tr>
