--- a/src/app/modules/auth/login/components/pages/login/login.page.html
+++ b/src/app/modules/auth/login/components/pages/login/login.page.html
@@ -1,18 +1,19 @@
-<div class="center">
+<div class="box">
   <h1>Login</h1>
   <form [formGroup]="loginForm">
     <div class="txt_field">
-      <input #loginInput type="text" formControlName="login" required />
-      <span></span>
-      <label>Username</label>
+      <label for="login">Username</label>
+      <input id="login" #loginInput type="text" formControlName="login" />
     </div>
     <div class="txt_field">
-      <input type="password" formControlName="password" required />
-      <span></span>
-      <label>Password</label>
+      <label for="password">Password</label>
+      <input id="password" type="password" formControlName="password" />
     </div>
-    <div class="pass">Forgot Password?</div>
     <button (click)="sendForm()" type="submit">Login</button>
+
+    <div class="forgot">
+      <a href="#" class="pass">Forgot Password?</a>
+    </div>
     <div class="signup_link">Not a member? <a href="#">Signup</a></div>
   </form>
 </div>
