--- a/src/app/modules/auth/login/components/pages/login/login.page.scss
+++ b/src/app/modules/auth/login/components/pages/login/login.page.scss
@@ -6,12 +6,7 @@
   align-items: center;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.center {
+.box {
   max-width: 400px;
   width: 100%;
   margin: 5px;
@@ -19,92 +14,59 @@
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
-.center h1 {
+
+h1 {
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
+  margin: 0;
 }
-.center form {
+
+form {
   padding: 0 40px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
-form .txt_field {
-  position: relative;
-  border-bottom: 2px solid #adadad;
-  margin: 30px 0;
+
+.txt_field {
+  display: flex;
+  flex-direction: column;
 }
-.txt_field input {
-  width: 100%;
-  padding: 0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
-}
-.txt_field label {
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  font-size: 16px;
-  pointer-events: none;
-  transition: 0.5s;
-}
-.txt_field span::before {
-  content: "";
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background: #2691d9;
-  transition: 0.5s;
-}
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label {
-  top: -5px;
-  color: #2691d9;
-}
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before {
-  width: 100%;
-}
+
 .pass {
-  margin: -5px 0 20px 5px;
   color: #a6a6a6;
-  cursor: pointer;
+  text-align: right;
 }
+
 .pass:hover {
   text-decoration: underline;
 }
+
 button[type="submit"] {
-  width: 100%;
-  height: 50px;
-  border: 1px solid;
-  background: #2691d9;
-  border-radius: 25px;
-  font-size: 18px;
-  color: #e9f4fb;
-  font-weight: 700;
-  cursor: pointer;
-  outline: none;
+  font-size: 0.9rem;
 }
-button[type="submit"]:hover {
-  border-color: #2691d9;
-  transition: 0.5s;
-}
+
 .signup_link {
-  margin: 30px 0;
+  margin: 2rem auto 3rem;
   text-align: center;
-  font-size: 16px;
   color: #666666;
 }
+
 .signup_link a {
   color: #2691d9;
   text-decoration: none;
 }
+
 .signup_link a:hover {
   text-decoration: underline;
+}
+
+.forgot {
+  text-align: right;
+  font-size: 0.9rem;
 }
