--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("./normalize.css");
-
+@import "./normalize.css";
 @import "@angular/cdk/overlay-prebuilt.css";
 
 *,
@@ -15,4 +14,13 @@ button {
   &:disabled {
     cursor: not-allowed;
   }
+}
+
+label {
+  cursor: pointer;
+}
+
+body {
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
