Add lost password module

--- a/src/app/modules/auth/login/components/pages/login/login.page.html
+++ b/src/app/modules/auth/login/components/pages/login/login.page.html
@@ -12,7 +12,7 @@
     <button (click)="sendForm()" type="submit">Login</button>
 
     <div class="forgot">
-      <a href="#" class="pass">Forgot Password?</a>
+      <a routerLink="/auth/lost-password" class="pass">Forgot Password?</a>
     </div>
     <div class="signup_link">Not a member? <a href="#">Signup</a></div>
   </form>
