Add sign up module

--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
@@ -4,6 +4,7 @@
     <li><a routerLink="/to-do">To do list</a></li>
     <li><a routerLink="/calculator">Calculator</a></li>
     <li><a routerLink="/auth/login">Login</a></li>
+    <li><a routerLink="/auth/sign-up">Sign up</a></li>
   </ul>
 </nav>
 
