--- a/src/app/modules/auth/lost-password/components/pages/lost-password/lost-password.page.html
+++ b/src/app/modules/auth/lost-password/components/pages/lost-password/lost-password.page.html
@@ -3,7 +3,7 @@
 
   <form [formGroup]="form">
     <div class="txt_field">
-      <label for="loginOrEmail">
+      <label class="info" for="loginOrEmail">
         Please enter your username or email address. You will receive an email message with instructions on how to reset
         your password.
       </label>
@@ -18,6 +18,6 @@
     <div class="forgot">
       <a routerLink="/auth/login" class="pass">Log in</a>
     </div>
-    <div class="signup_link">Not a member? <a href="#">Signup</a></div>
+    <div class="signup_link">Not a member? <a routerLink="/auth/sign-up">Sign up</a></div>
   </form>
 </div>
