--- a/src/app/modules/auth/login/components/pages/login/login.page.html
+++ b/src/app/modules/auth/login/components/pages/login/login.page.html
@@ -14,6 +14,6 @@
     <div class="forgot">
       <a routerLink="/auth/lost-password" class="pass">Forgot Password?</a>
     </div>
-    <div class="signup_link">Not a member? <a href="#">Signup</a></div>
+    <div class="signup_link">Not a member? <a routerLink="/auth/sign-up">Sign up</a></div>
   </form>
 </div>
