--- a/src/app/modules/auth/lost-password/components/pages/lost-password/lost-password.page.html
+++ b/src/app/modules/auth/lost-password/components/pages/lost-password/lost-password.page.html
@@ -1,7 +1,7 @@
 <div class="box">
   <h1>Forgot password</h1>
 
-  <form [formGroup]="form">
+  <form [formGroup]="form" cdkTrapFocus cdkTrapFocusAutoCapture>
     <div class="txt_field">
       <label class="info" for="loginOrEmail">
         Please enter your username or email address. You will receive an email message with instructions on how to reset
