--- a/src/app/modules/calculator/components/display/display.component.scss
+++ b/src/app/modules/calculator/components/display/display.component.scss
@@ -1,18 +1,39 @@
 :host {
-  display: block;
+  display: flex;
   width: 100%;
   height: 75px;
   position: relative;
+  align-items: center;
+
+  padding-left: 1rem;
+  padding-right: 1rem;
+
+  border: 1px solid rgb(118, 118, 118);
+
+  &:focus-within {
+    box-shadow: 0px 0px 1px 1px rgb(16 16 16);
+  }
 }
 
 input {
   width: 100%;
   height: 100%;
+  border: none;
+  outline: none;
 }
 
-div {
+.errors {
+  background: hsl(0deg 86% 30% / 80%);
+  color: white;
   position: absolute;
-  right: 0;
-  top: 50%;
-  translate: -50% -50%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.result {
 }
