--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
@@ -1,31 +1,90 @@
 :host {
   display: grid;
-  grid-template-columns: 10% 1fr;
+  grid-template-columns: minmax(280px, 10%) 1fr;
+  min-height: 100vh;
 }
 
-h3,
-a {
-  width: 100%;
-  display: block;
-  padding: 8px 16px;
-  text-align: left;
-  border: none;
-  white-space: normal;
-  float: none;
-  outline: 0;
+.top {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 1rem;
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+
+  img {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  h3 {
+    margin: 0;
+  }
 }
 
 a {
+  display: flex;
+  border-radius: 0.375rem;
+  padding: 0.5rem 1rem;
   color: inherit;
   text-decoration: none;
+  gap: 1rem;
+
+  svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &:hover {
+    background-color: hsl(216deg 90% 52% / 50%);
+  }
+
+  &.active {
+    background-color: hsl(216deg 90% 52%);
+    cursor: default;
+  }
 }
 
-a:hover {
-  color: #000;
-  background-color: #ccc;
+@media screen and (max-width: 1000px) {
+  a {
+    svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
+    span {
+      display: none;
+    }
+  }
+
+  .top {
+    justify-content: center;
+
+    h3 {
+      display: none;
+    }
+
+    img {
+      height: auto;
+    }
+  }
+
+  :host {
+    grid-template-columns: 5.5rem 1fr;
+  }
+}
+
+nav {
+  color: #fff;
+  background-color: rgba(33, 37, 41);
+  padding: 1rem;
 }
 
 ul {
   list-style: none;
   padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
