--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
@@ -1,9 +1,18 @@
 <nav>
   <div class="top">
-    <img src="/assets/logo.png" alt="Logo" />
+    <a routerLink="/">
+      <img src="/assets/logo.png" alt="Logo" />
+    </a>
     <h3>Menu</h3>
+
+    <button class="hamburger" (click)="collapsed = !collapsed">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+    </button>
   </div>
-  <ul>
+  <ul [class.show]="!collapsed">
     <li>
       <a routerLinkActive="active" routerLink="/to-do" title="To do list">
         <!-- prettier-ignore -->
