--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
@@ -10,7 +10,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   gap: 1rem;
-  padding: 1rem 0.5rem;
+  padding: 0 0.5rem 1rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 
   img {
@@ -23,27 +23,45 @@
   }
 }
 
-a {
+nav {
+  color: #fff;
+  background-color: rgba(33, 37, 41);
+  padding: 1rem;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
   display: flex;
-  border-radius: 0.375rem;
-  padding: 0.5rem 1rem;
-  color: inherit;
-  text-decoration: none;
-  gap: 1rem;
+  flex-direction: column;
+  gap: 0.2rem;
 
-  svg {
-    width: 1rem;
-    height: 1rem;
-  }
+  a {
+    display: flex;
+    border-radius: 0.375rem;
+    padding: 0.5rem 1rem;
+    color: inherit;
+    text-decoration: none;
+    gap: 1rem;
 
-  &:hover {
-    background-color: hsl(216deg 90% 52% / 50%);
-  }
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
 
-  &.active {
-    background-color: hsl(216deg 90% 52%);
-    cursor: default;
+    &:hover {
+      background-color: hsl(216deg 90% 52% / 50%);
+    }
+
+    &.active {
+      background-color: hsl(216deg 90% 52%);
+      cursor: default;
+    }
   }
+}
+
+.hamburger {
+  display: none;
 }
 
 @media screen and (max-width: 1000px) {
@@ -75,16 +93,52 @@ a {
   }
 }
 
-nav {
-  color: #fff;
-  background-color: rgba(33, 37, 41);
-  padding: 1rem;
-}
+@media screen and (max-width: 750px) {
+  :host {
+    display: block;
+  }
 
-ul {
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
+  ul {
+    display: none;
+
+    &.show {
+      display: flex;
+    }
+  }
+
+  .top {
+    justify-content: space-between;
+
+    h3 {
+      display: block;
+    }
+  }
+
+  a {
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
+
+    span {
+      display: block;
+    }
+  }
+
+  .top {
+    border-bottom: 0;
+    padding: 0;
+  }
+
+  .hamburger {
+    display: block;
+    color: #fff;
+    background: transparent;
+    border: none;
+
+    svg {
+      width: 2rem;
+      height: auto;
+    }
+  }
 }
