--- a/src/app/modules/calculator/components/calculator/calculator.component.scss
+++ b/src/app/modules/calculator/components/calculator/calculator.component.scss
@@ -6,10 +6,11 @@
 
   gap: 1rem;
 
-  margin-top: 1rem;
   max-width: 450px;
   margin-left: auto;
   margin-right: auto;
+
+  padding: 1rem;
 }
 
 button {
