Create weather widget

--- a/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
+++ b/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
@@ -1,24 +1,21 @@
-<div class="widget tasks">
-  <div class="content">
-    <h3>Tasks</h3>
-    <p>1 543</p>
-  </div>
+<div class="dashboard">
+  <app-widget>
+    <ng-container title>Poland</ng-container>
+    <app-weather-widget></app-weather-widget>
+  </app-widget>
 
-  <!-- prettier-ignore -->
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="icon" viewBox="0 0 16 16">
-    <path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
-    <path d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
-  </svg>
-</div>
+  <app-widget>
+    <ng-container title>Croatia</ng-container>
+    <app-weather-widget></app-weather-widget>
+  </app-widget>
 
-<div class="widget tasks">
-  <div class="content">
-    <h3>Weather</h3>
-    <p>Sunny</p>
-  </div>
+  <app-widget>
+    <ng-container title>Panama</ng-container>
+    <app-weather-widget></app-weather-widget>
+  </app-widget>
 
-  <!-- prettier-ignore -->
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="icon" viewBox="0 0 16 16">
-    <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
-  </svg>
+  <app-widget>
+    <ng-container title>Peru</ng-container>
+    <app-weather-widget></app-weather-widget>
+  </app-widget>
 </div>
