--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.scss
@@ -36,6 +36,7 @@ nav {
 ul {
   list-style: none;
   padding-left: 0;
+  padding-right: 0;
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
