--- a/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.scss
+++ b/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.scss
@@ -1,58 +1,24 @@
 :host {
-  display: grid;
+  display: block;
   background: #ecf0f4;
   min-height: 100vh;
-
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: min-content;
-  gap: 1rem;
-  align-items: start;
-
   padding: 1rem;
 }
 
-.widget {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
+.dashboard {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
-
-  padding: 2rem 1rem;
-  background: #fff;
-  border-radius: 0.5rem;
-
-  .icon {
-    width: 3.5rem;
-    height: 3.5rem;
-    background: #ecf0f4;
-    padding: 1rem;
-    border-radius: 100%;
-
-    color: #1b00ff;
-  }
-
-  &.tasks {
-    justify-content: space-between;
-  }
-
-  h3 {
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-  p {
-    margin-bottom: 0;
-  }
 }
 
 @media screen and (max-width: 1450px) {
-  :host {
+  .dashboard {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 750px) {
-  :host {
+  .dashboard {
     grid-template-columns: 1fr;
   }
 }
