Fix icon position on tables

--- a/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
+++ b/src/app/layouts/container-with-sidebar/components/container-with-sidebar/container-with-sidebar.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       <img src="/assets/logo.png" alt="Logo" />
     </a>
-    <h3>Menu</h3>
+    <h3>CDG Studio</h3>
 
     <button class="hamburger" (click)="collapsed = !collapsed">
       <!-- prettier-ignore -->
