--- a/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
+++ b/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
@@ -1,21 +1,13 @@
 <div class="dashboard">
-  <app-widget>
-    <ng-container title>Poland</ng-container>
+  <app-widget *ngFor="let _ of widgets">
+    <ng-container title>Weather widget</ng-container>
     <app-weather-widget></app-weather-widget>
   </app-widget>
 
-  <app-widget>
-    <ng-container title>Croatia</ng-container>
-    <app-weather-widget></app-weather-widget>
-  </app-widget>
-
-  <app-widget>
-    <ng-container title>Panama</ng-container>
-    <app-weather-widget></app-weather-widget>
-  </app-widget>
-
-  <app-widget>
-    <ng-container title>Peru</ng-container>
-    <app-weather-widget></app-weather-widget>
-  </app-widget>
+  <button (click)="addNewWidget()" class="add-new-widget">
+    <!-- prettier-ignore -->
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+    </svg>
+  </button>
 </div>
