--- a/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather-widget-edit.component.html
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather-widget-edit.component.html
@@ -6,12 +6,7 @@
   <app-modal-body>
     <div>
       <label for="city">City</label>
-      <select id="city" formControlName="city">
-        <option value="London">London</option>
-        <option value="Warsaw">Warsaw</option>
-        <option value="Washington">Washington</option>
-        <option value="Madryt">Madryt</option>
-      </select>
+      <input id="city" type="text" formControlName="city" autocomplete="off" />
     </div>
   </app-modal-body>
 
