--- a/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.scss
+++ b/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.scss
@@ -1,8 +1,4 @@
 :host {
-  display: block;
-}
-
-nav {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -48,8 +44,7 @@ button {
   align-items: center;
 }
 
-:disabled,
-.reloading {
+:disabled {
   opacity: 0.5;
   pointer-events: none;
   cursor: default;
