--- a/src/app/modules/dashboard/modules/widgets/weather-widget/components/weather-widget/weather-widget.component.html
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget/components/weather-widget/weather-widget.component.html
@@ -1,10 +1,36 @@
+<app-widget-toolbar>
+  <ng-container title>{{ city | titlecase }}</ng-container>
+</app-widget-toolbar>
+
 <div class="content">
-  <h3>{{ city | titlecase }}</h3>
+  <div class="suns">
+    <span class="item">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="sun" viewBox="0 0 16 16">
+        <path d="M7.646 1.146a.5.5 0 0 1 .708 0l1.5 1.5a.5.5 0 0 1-.708.708L8.5 2.707V4.5a.5.5 0 0 1-1 0V2.707l-.646.647a.5.5 0 1 1-.708-.708l1.5-1.5zM2.343 4.343a.5.5 0 0 1 .707 0l1.414 1.414a.5.5 0 0 1-.707.707L2.343 5.05a.5.5 0 0 1 0-.707zm11.314 0a.5.5 0 0 1 0 .707l-1.414 1.414a.5.5 0 1 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zM8 7a3 3 0 0 1 2.599 4.5H5.4A3 3 0 0 1 8 7zm3.71 4.5a4 4 0 1 0-7.418 0H.499a.5.5 0 0 0 0 1h15a.5.5 0 0 0 0-1h-3.79zM0 10a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 0 10zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+      <span *ngIf="lastResponse">{{ lastResponse.sys.sunrise | unix | date: "shortTime" }}</span>
+    </span>
 
-  <ul>
-    <li>{{ lastResponse?.main?.temp ?? 0 | number: "2.0-0" }}&#xB0;C</li>
-    <li>{{ lastResponse | weatherDescription | titlecase }}</li>
-  </ul>
+    <span class="item">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="sun" viewBox="0 0 16 16">
+        <path d="M7.646 4.854a.5.5 0 0 0 .708 0l1.5-1.5a.5.5 0 0 0-.708-.708l-.646.647V1.5a.5.5 0 0 0-1 0v1.793l-.646-.647a.5.5 0 1 0-.708.708l1.5 1.5zm-5.303-.51a.5.5 0 0 1 .707 0l1.414 1.413a.5.5 0 0 1-.707.707L2.343 5.05a.5.5 0 0 1 0-.707zm11.314 0a.5.5 0 0 1 0 .706l-1.414 1.414a.5.5 0 1 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zM8 7a3 3 0 0 1 2.599 4.5H5.4A3 3 0 0 1 8 7zm3.71 4.5a4 4 0 1 0-7.418 0H.499a.5.5 0 0 0 0 1h15a.5.5 0 0 0 0-1h-3.79zM0 10a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 0 10zm13 0a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+      <span *ngIf="lastResponse">{{ lastResponse.sys.sunset | unix | date: "shortTime" }}</span>
+    </span>
+  </div>
+
+  <span class="temperature"> {{ lastResponse?.main?.temp ?? 0 | number: "1.0-0" }}&#xB0;</span>
+
+  <ng-container *ngIf="lastResponse | weatherIconUrl; else empty">
+    <img [src]="lastResponse | weatherIconUrl" alt="Weather" />
+  </ng-container>
+
+  <ng-template #empty>
+    <!-- prettier-ignore -->
+    <svg class="empty" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+    </svg>
+  </ng-template>
 </div>
-
-<img [src]="lastResponse | weatherIconUrl" alt="Weather" />
