--- a/src/app/modules/dashboard/modules/widgets/weather-widget/components/weather-widget/weather-widget.component.scss
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget/components/weather-widget/weather-widget.component.scss
@@ -1,15 +1,15 @@
 :host {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  gap: 1rem;
-  justify-content: space-between;
-
-  padding: 2rem 1rem;
+  display: block;
   background: #fff;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+
+  padding: 1rem 2rem;
 }
 
 svg {
@@ -22,10 +22,30 @@ svg {
   color: #1b00ff;
 }
 
-h3 {
-  margin-bottom: 0;
-  margin-top: 0;
+.temperature {
+  font-size: 3rem;
 }
-p {
-  margin-bottom: 0;
+
+.suns {
+  display: flex;
+  flex-direction: column;
+  justify-self: start;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+}
+
+.sun {
+  width: 2rem;
+  height: 2rem;
+  padding: 0.25rem;
+  background: transparent;
+}
+
+.empty {
+  justify-self: end;
 }
