Add GitHub stars widget

--- a/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
+++ b/src/app/modules/dashboard/components/pages/dashboard/dashboard.page.html
@@ -3,6 +3,8 @@
     <app-weather-widget></app-weather-widget>
   </ng-container>
 
+  <app-github-stars-widget></app-github-stars-widget>
+
   <button (click)="addNewWidget()" class="add-new-widget">
     <!-- prettier-ignore -->
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
