Prototype of statefull widgets

--- a/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.scss
+++ b/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.scss
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: space-between;
 
+  min-height: 2.5rem;
+
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 
