--- a/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
@@ -11,6 +11,6 @@
   </app-modal-body>
 
   <app-modal-footer>
-    <button type="submit" form="form">Update</button>
+    <button type="submit" form="form" [disabled]="!form.valid">Update</button>
   </app-modal-footer>
 </form>
