Create modal service

--- a/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.html
+++ b/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.html
@@ -2,8 +2,8 @@
   <ng-content select="[title]"></ng-content>
 </h2>
 <ul>
-  <li>
-    <button *ngIf="moduleSourceImport" (click)="edit()" title="Edit widget">
+  <li *ngIf="moduleSourceImport">
+    <button (click)="edit()" title="Edit widget">
       <!-- prettier-ignore -->
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -11,8 +11,8 @@
       </svg>
     </button>
   </li>
-  <li>
-    <button *ngIf="reloadableWidget" (click)="reload()" [disabled]="isReloading" title="Reload widget">
+  <li *ngIf="reloadableWidget">
+    <button (click)="reload()" [disabled]="isReloading" title="Reload widget">
       <!-- prettier-ignore -->
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
