--- a/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
@@ -1,16 +1,18 @@
-<form app-modal [formGroup]="form" (ngSubmit)="update()" cdkTrapFocus cdkTrapFocusAutoCapture>
+<app-modal cdkTrapFocus cdkTrapFocusAutoCapture>
   <app-modal-header>
     <h2 app-modal-title>Edit weather widget</h2>
   </app-modal-header>
 
   <app-modal-body>
-    <div>
-      <label for="city">City</label>
-      <input id="city" type="text" formControlName="city" autocomplete="off" cdkFocusInitial />
-    </div>
+    <form id="form" [formGroup]="form" (ngSubmit)="update()">
+      <div>
+        <label for="city">City</label>
+        <input id="city" type="text" formControlName="city" autocomplete="off" cdkFocusInitial />
+      </div>
+    </form>
   </app-modal-body>
 
   <app-modal-footer>
-    <button type="submit" [disabled]="!form.valid">Update</button>
+    <button type="submit" form="form" [disabled]="!form.valid">Update</button>
   </app-modal-footer>
-</form>
+</app-modal>
