--- a/src/app/modules/dashboard/components/widget-selection/widget-selection.component.scss
+++ b/src/app/modules/dashboard/components/widget-selection/widget-selection.component.scss
@@ -1,3 +1,55 @@
 :host {
   display: block;
 }
+
+app-modal {
+  max-width: 70%;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  transition: scale 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  padding: 1rem;
+}
+
+li:hover {
+  scale: 1.1;
+}
+
+ul:has(:hover) li:not(:hover) {
+  scale: 0.95;
+}
+
+button {
+  border: none;
+  background: transparent;
+  padding: 0;
+}
+
+figure {
+  border: thin #c0c0c0 solid;
+  display: flex;
+  flex-flow: column;
+  padding: 0.5rem;
+  margin: auto;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+figcaption {
+  background-color: #222;
+  color: #fff;
+  font-size: 0.75rem;
+  padding: 0.1rem;
+  text-align: center;
+}
