--- a/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
+++ b/src/app/modules/dashboard/modules/widgets/weather-widget-edit/components/weather-widget-edit/weather.widget-edit.html
@@ -7,12 +7,12 @@
     <form id="form" [formGroup]="form" (ngSubmit)="update()">
       <div>
         <label for="city">City</label>
-        <input id="city" type="text" formControlName="city" autocomplete="off" cdkFocusInitial />
+        <input app-input id="city" type="text" formControlName="city" autocomplete="off" cdkFocusInitial />
       </div>
     </form>
   </app-modal-body>
 
   <app-modal-footer>
-    <button type="submit" form="form" [disabled]="!form.valid">Update</button>
+    <button app-button type="submit" form="form" [disabled]="!form.valid">Update</button>
   </app-modal-footer>
 </app-modal>
