--- a/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.html
+++ b/src/app/modules/dashboard/modules/widgets/widget/components/widget-toolbar/widget-toolbar.component.html
@@ -3,7 +3,7 @@
 </h2>
 <ul>
   <li *ngIf="moduleSourceImport">
-    <button (click)="edit()" title="Edit widget">
+    <button (click)="edit()" [disabled]="isReloading" title="Edit widget">
       <!-- prettier-ignore -->
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -21,7 +21,7 @@
     </button>
   </li>
   <li>
-    <button (click)="remove()" title="Remove widget">
+    <button (click)="remove()" [disabled]="isReloading" title="Remove widget">
       <!-- prettier-ignore -->
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
