--- a/src/app/modules/dashboard/components/widget-selection/widget-selection.component.scss
+++ b/src/app/modules/dashboard/components/widget-selection/widget-selection.component.scss
@@ -17,7 +17,10 @@ ul {
 
 li {
   transition: scale 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  padding: 1rem;
+
+  button {
+    padding: 1rem;
+  }
 }
 
 li:hover {
