Prototype of dashboard library

--- a/src/app/modules/dashboard/modules/widgets/yt-channel-statistics-edit/components/yt-channel-statistics-edit/yt-channel-statistics-edit.component.html
+++ b/src/app/modules/dashboard/modules/widgets/yt-channel-statistics-edit/components/yt-channel-statistics-edit/yt-channel-statistics-edit.component.html
@@ -6,7 +6,7 @@
   <app-modal-body>
     <form app-form-column id="form" [formGroup]="form" (ngSubmit)="update()">
       <div>
-        <label for="channel">Channel</label>
+        <label for="channel">Channel Id</label>
         <input app-input id="channel" type="text" formControlName="channel" autocomplete="off" cdkFocusInitial />
       </div>
     </form>
