--- a/src/app/modules/dashboard/modules/widgets/yt-channel-statistics/components/yt-channel-statistics/yt-channel-statistics.widget.html
+++ b/src/app/modules/dashboard/modules/widgets/yt-channel-statistics/components/yt-channel-statistics/yt-channel-statistics.widget.html
@@ -1,5 +1,5 @@
 <app-widget-toolbar>
-  <ng-container title> Channel {{ channel$ | async | uppercase }} </ng-container>
+  <ng-container title> Channel {{ channel$ | async }} </ng-container>
 </app-widget-toolbar>
 
 <div *ngIf="stats$ | async as stats" class="content">
